cli/crates/core/tests/snapshots/test_parser__parse_typescript@if-else-function.tsx-2.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/functional-component/control-statements/conditional-if/return-var/if-else-function.tsx
---
source_path: src/functional-component/control-statements/conditional-if/return-var/if-else-function.tsx
id:
  hash: "17991344359237955800"
  path: src/functional-component/control-statements/conditional-if/return-var/if-else-function.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "Sample#1"
    exported_name: Sample
declarations:
  - symbol: "React#1"
    source:
      hash: "17991344359237955800"
      path: src/functional-component/control-statements/conditional-if/return-var/if-else-function.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('default' type=static), context: #0 }, source: ModuleId { hash: 11002248552354871051, path: \"\", pkg_name: \"react\", mtype: Package } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "default#0"
          source:
            hash: "11002248552354871051"
            path: ""
            package_name: react
            mtype: package
        is_local: false
    start:
      line: 1
      column: 8
    end:
      line: 1
      column: 13
  - symbol: "Sample#1"
    source:
      hash: "17991344359237955800"
      path: src/functional-component/control-statements/conditional-if/return-var/if-else-function.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<declaration>"
    inferred_type:
      Function:
        - TypeOf:
            symbol:
              symbol: "result#3"
              source:
                hash: "17991344359237955800"
                path: src/functional-component/control-statements/conditional-if/return-var/if-else-function.tsx
                package_name: UNKNOWN
                mtype: local
            is_local: true
    start:
      line: 11
      column: 8
    end:
      line: 21
      column: 2
  - symbol: "bool#3"
    source:
      hash: "17991344359237955800"
      path: src/functional-component/control-statements/conditional-if/return-var/if-else-function.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "Parameter<Symbol { name: Atom('Sample' type=inline), context: #1 }>[0]"
    inferred_type:
      ParameterOf:
        function:
          symbol: "Sample#1"
          source:
            hash: "17991344359237955800"
            path: src/functional-component/control-statements/conditional-if/return-var/if-else-function.tsx
            package_name: UNKNOWN
            mtype: local
        index: 0
    start:
      line: 11
      column: 24
    end:
      line: 11
      column: 37
  - symbol: "renderSample#1"
    source:
      hash: "17991344359237955800"
      path: src/functional-component/control-statements/conditional-if/return-var/if-else-function.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<declaration>"
    inferred_type:
      Function:
        - JSX
    start:
      line: 7
      column: 1
    end:
      line: 9
      column: 2
  - symbol: "result#3"
    source:
      hash: "17991344359237955800"
      path: src/functional-component/control-statements/conditional-if/return-var/if-else-function.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<empty>"
    inferred_type: Unknown
    start:
      line: 12
      column: 9
    end:
      line: 12
      column: 15
  - symbol: "returnFortyTwo#1"
    source:
      hash: "17991344359237955800"
      path: src/functional-component/control-statements/conditional-if/return-var/if-else-function.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<declaration>"
    inferred_type:
      Function:
        - Unknown
    start:
      line: 3
      column: 1
    end:
      line: 5
      column: 2
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "returnFortyTwo#1"
      - "renderSample#1"
      - "Sample#1"
      - "Sample#1"
    references:
      - "React#1"
      - "Sample#1"
      - "bool#3"
      - "div#2"
      - "renderSample#1"
      - "result#3"
      - "returnFortyTwo#1"
    jsx_references:
      - "div#2"
  - owner: "returnFortyTwo#1"
    parent: "__global#0"
    children: []
    references: []
    jsx_references: []
  - owner: "renderSample#1"
    parent: "__global#0"
    children: []
    references:
      - "div#2"
    jsx_references:
      - "div#2"
  - owner: "Sample#1"
    parent: "__global#0"
    children: []
    references:
      - "bool#3"
      - "renderSample#1"
      - "result#3"
      - "returnFortyTwo#1"
    jsx_references: []
  - owner: "Sample#1"
    parent: "__global#0"
    children: []
    references:
      - "bool#3"
      - "renderSample#1"
      - "result#3"
      - "returnFortyTwo#1"
    jsx_references: []
body:
  - type: ImportDeclaration
    span:
      start: 1
      end: 27
      ctxt: 0
    specifiers:
      - type: ImportDefaultSpecifier
        span:
          start: 8
          end: 13
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 8
            end: 13
            ctxt: 1
          value: React
          optional: false
    source:
      type: StringLiteral
      span:
        start: 19
        end: 26
        ctxt: 0
      value: react
      raw: "\"react\""
    typeOnly: false
    asserts: ~
  - async: false
    body:
      type: BlockStatement
      span:
        start: 55
        end: 73
        ctxt: 0
      stmts:
        - type: ReturnStatement
          span:
            start: 61
            end: 71
            ctxt: 0
          argument:
            type: NumericLiteral
            span:
              start: 68
              end: 70
              ctxt: 0
            value: 42.0
            raw: "42"
    declare: false
    decorators: []
    generator: false
    identifier:
      type: Identifier
      span:
        start: 38
        end: 52
        ctxt: 1
      value: returnFortyTwo
      optional: false
    params: []
    returnType: ~
    span:
      start: 29
      end: 73
      ctxt: 0
    type: FunctionDeclaration
    typeParameters: ~
  - async: false
    body:
      type: BlockStatement
      span:
        start: 99
        end: 132
        ctxt: 0
      stmts:
        - type: ReturnStatement
          span:
            start: 105
            end: 130
            ctxt: 0
          argument:
            type: JSXElement
            span:
              start: 112
              end: 129
              ctxt: 0
            opening:
              type: JSXOpeningElement
              name:
                type: Identifier
                span:
                  start: 113
                  end: 116
                  ctxt: 2
                value: div
                optional: false
              span:
                start: 112
                end: 117
                ctxt: 0
              attributes: []
              selfClosing: false
              typeArguments: ~
            children:
              - type: JSXText
                span:
                  start: 117
                  end: 123
                  ctxt: 0
                value: Sample
                raw: Sample
            closing:
              type: JSXClosingElement
              span:
                start: 123
                end: 129
                ctxt: 0
              name:
                type: Identifier
                span:
                  start: 125
                  end: 128
                  ctxt: 2
                value: div
                optional: false
    declare: false
    decorators: []
    generator: false
    identifier:
      type: Identifier
      span:
        start: 84
        end: 96
        ctxt: 1
      value: renderSample
      optional: false
    params: []
    returnType: ~
    span:
      start: 75
      end: 132
      ctxt: 0
    type: FunctionDeclaration
    typeParameters: ~
  - type: ExportDeclaration
    span:
      start: 134
      end: 315
      ctxt: 0
    declaration:
      async: false
      body:
        type: BlockStatement
        span:
          start: 172
          end: 315
          ctxt: 0
        stmts:
          - type: VariableDeclaration
            span:
              start: 178
              end: 189
              ctxt: 0
            kind: let
            declare: false
            declarations:
              - type: VariableDeclarator
                span:
                  start: 182
                  end: 188
                  ctxt: 0
                id:
                  optional: false
                  span:
                    start: 182
                    end: 188
                    ctxt: 3
                  type: Identifier
                  typeAnnotation: ~
                  value: result
                init: ~
                definite: false
          - type: IfStatement
            span:
              start: 195
              end: 293
              ctxt: 0
            test:
              type: Identifier
              span:
                start: 199
                end: 203
                ctxt: 3
              value: bool
              optional: false
            consequent:
              type: BlockStatement
              span:
                start: 205
                end: 247
                ctxt: 0
              stmts:
                - type: ExpressionStatement
                  span:
                    start: 215
                    end: 241
                    ctxt: 0
                  expression:
                    type: AssignmentExpression
                    span:
                      start: 215
                      end: 240
                      ctxt: 0
                    operator: "="
                    left:
                      optional: false
                      span:
                        start: 215
                        end: 221
                        ctxt: 3
                      type: Identifier
                      typeAnnotation: ~
                      value: result
                    right:
                      type: CallExpression
                      span:
                        start: 224
                        end: 240
                        ctxt: 0
                      callee:
                        type: Identifier
                        span:
                          start: 224
                          end: 238
                          ctxt: 1
                        value: returnFortyTwo
                        optional: false
                      arguments: []
                      typeArguments: ~
            alternate:
              type: BlockStatement
              span:
                start: 253
                end: 293
                ctxt: 0
              stmts:
                - type: ExpressionStatement
                  span:
                    start: 263
                    end: 287
                    ctxt: 0
                  expression:
                    type: AssignmentExpression
                    span:
                      start: 263
                      end: 286
                      ctxt: 0
                    operator: "="
                    left:
                      optional: false
                      span:
                        start: 263
                        end: 269
                        ctxt: 3
                      type: Identifier
                      typeAnnotation: ~
                      value: result
                    right:
                      type: CallExpression
                      span:
                        start: 272
                        end: 286
                        ctxt: 0
                      callee:
                        type: Identifier
                        span:
                          start: 272
                          end: 284
                          ctxt: 1
                        value: renderSample
                        optional: false
                      arguments: []
                      typeArguments: ~
          - type: ReturnStatement
            span:
              start: 299
              end: 313
              ctxt: 0
            argument:
              type: Identifier
              span:
                start: 306
                end: 312
                ctxt: 3
              value: result
              optional: false
      declare: false
      decorators: []
      generator: false
      identifier:
        type: Identifier
        span:
          start: 150
          end: 156
          ctxt: 1
        value: Sample
        optional: false
      params:
        - type: Parameter
          span:
            start: 157
            end: 170
            ctxt: 0
          decorators: []
          pat:
            optional: false
            span:
              start: 157
              end: 170
              ctxt: 3
            type: Identifier
            typeAnnotation:
              type: TsTypeAnnotation
              span:
                start: 161
                end: 170
                ctxt: 0
              typeAnnotation:
                type: TsKeywordType
                span:
                  start: 163
                  end: 170
                  ctxt: 0
                kind: boolean
            value: bool
      returnType: ~
      span:
        start: 141
        end: 315
        ctxt: 0
      type: FunctionDeclaration
      typeParameters: ~
