cli/crates/core/tests/snapshots/test_parser__parse_typescript@index.ts-2.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n            &project_root, &module_resolver).unwrap()"
input_file: samples/typescript/src/wildcard-re-export/components/Divider/index.ts
---
source_path: src/wildcard-re-export/components/Divider/index.ts
id:
  hash: "16158105738101550855"
  path: src/wildcard-re-export/components/Divider/index.ts
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      External:
        symbol: "<wildcard>#0"
        source:
          hash: "14780211780651411246"
          path: Divider
          package_name: "@mui/material"
          mtype: package
    exported_name: "<wildcard>"
declarations: []
scopes:
  - owner: "__global#0"
    parent: ~
    children: []
    references: []
    jsx_references: []
body:
  - type: ExportAllDeclaration
    span:
      start: 1
      end: 39
      ctxt: 0
    source:
      type: StringLiteral
      span:
        start: 15
        end: 38
        ctxt: 0
      value: "@mui/material/Divider"
      raw: "\"@mui/material/Divider\""
    asserts: ~

