cli/crates/core/tests/snapshots/test_parser__parse_typescript@index.tsx-2.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/module-decls/default-export/default-export-anon-func-index/index.tsx
---
source_path: src/module-decls/default-export/default-export-anon-func-index/index.tsx
id:
  hash: "16069976020702245511"
  path: src/module-decls/default-export/default-export-anon-func-index/index.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "<anonymous-1>#0"
    exported_name: default
declarations:
  - symbol: "<anonymous-1>#0"
    source:
      hash: "16069976020702245511"
      path: src/module-decls/default-export/default-export-anon-func-index/index.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<expression>"
    inferred_type:
      Function:
        - JSX
    start:
      line: 1
      column: 16
    end:
      line: 3
      column: 2
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "<anonymous-1>#0"
      - "<anonymous-2>#0"
    references:
      - "div#1"
    jsx_references:
      - "div#1"
  - owner: "<anonymous-1>#0"
    parent: "__global#0"
    children: []
    references:
      - "div#1"
    jsx_references:
      - "div#1"
  - owner: "<anonymous-2>#0"
    parent: "__global#0"
    children: []
    references:
      - "div#1"
    jsx_references:
      - "div#1"
body:
  - type: ExportDefaultDeclaration
    span:
      start: 1
      end: 54
      ctxt: 0
    decl:
      async: false
      body:
        type: BlockStatement
        span:
          start: 27
          end: 54
          ctxt: 0
        stmts:
          - type: ReturnStatement
            span:
              start: 33
              end: 52
              ctxt: 0
            argument:
              type: JSXElement
              span:
                start: 40
                end: 51
                ctxt: 0
              opening:
                type: JSXOpeningElement
                name:
                  type: Identifier
                  span:
                    start: 41
                    end: 44
                    ctxt: 1
                  value: div
                  optional: false
                span:
                  start: 40
                  end: 45
                  ctxt: 0
                attributes: []
                selfClosing: false
                typeArguments: ~
              children: []
              closing:
                type: JSXClosingElement
                span:
                  start: 45
                  end: 51
                  ctxt: 0
                name:
                  type: Identifier
                  span:
                    start: 47
                    end: 50
                    ctxt: 1
                  value: div
                  optional: false
      decorators: []
      generator: false
      identifier: ~
      params: []
      returnType: ~
      span:
        start: 16
        end: 54
        ctxt: 0
      type: FunctionExpression
      typeParameters: ~

