cli/crates/core/tests/snapshots/test_parser__parse_typescript@local.tsx-2.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/functional-component/return-var/local.tsx
---
source_path: src/functional-component/return-var/local.tsx
id:
  hash: "10327452081065499587"
  path: src/functional-component/return-var/local.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "Sample#1"
    exported_name: default
declarations:
  - symbol: "React#1"
    source:
      hash: "10327452081065499587"
      path: src/functional-component/return-var/local.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('default' type=static), context: #0 }, source: ModuleId { hash: 11002248552354871051, path: \"\", pkg_name: \"react\", mtype: Package } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "default#0"
          source:
            hash: "11002248552354871051"
            path: ""
            package_name: react
            mtype: package
        is_local: false
    start:
      line: 1
      column: 8
    end:
      line: 1
      column: 13
  - symbol: "Sample#1"
    source:
      hash: "10327452081065499587"
      path: src/functional-component/return-var/local.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<expression>"
    inferred_type:
      Function:
        - TypeOf:
            symbol:
              symbol: "component#2"
              source:
                hash: "10327452081065499587"
                path: src/functional-component/return-var/local.tsx
                package_name: UNKNOWN
                mtype: local
            is_local: true
    start:
      line: 3
      column: 16
    end:
      line: 7
      column: 2
  - symbol: "bool#2"
    source:
      hash: "10327452081065499587"
      path: src/functional-component/return-var/local.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "Parameter<Symbol { name: Atom('Sample' type=inline), context: #1 }>[0]"
    inferred_type:
      ParameterOf:
        function:
          symbol: "Sample#1"
          source:
            hash: "10327452081065499587"
            path: src/functional-component/return-var/local.tsx
            package_name: UNKNOWN
            mtype: local
        index: 0
    start:
      line: 3
      column: 32
    end:
      line: 3
      column: 36
  - symbol: "component#2"
    source:
      hash: "10327452081065499587"
      path: src/functional-component/return-var/local.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<expression>"
    inferred_type: JSX
    start:
      line: 4
      column: 11
    end:
      line: 4
      column: 20
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "Sample#1"
      - "Sample#1"
      - "component#2"
    references:
      - "React#1"
      - "Sample#1"
      - "bool#2"
      - "component#2"
      - "div#3"
    jsx_references:
      - "div#3"
  - owner: "Sample#1"
    parent: "__global#0"
    children:
      - "component#2"
    references:
      - "bool#2"
      - "component#2"
      - "div#3"
    jsx_references:
      - "div#3"
  - owner: "component#2"
    parent: "Sample#1"
    children: []
    references:
      - "div#3"
    jsx_references:
      - "div#3"
  - owner: "Sample#1"
    parent: "__global#0"
    children:
      - "component#2"
    references:
      - "bool#2"
      - "component#2"
      - "div#3"
    jsx_references:
      - "div#3"
  - owner: "component#2"
    parent: "Sample#1"
    children: []
    references:
      - "div#3"
    jsx_references:
      - "div#3"
  - owner: "component#2"
    parent: "__global#0"
    children: []
    references:
      - "div#3"
    jsx_references:
      - "div#3"
body:
  - type: ImportDeclaration
    span:
      start: 1
      end: 27
      ctxt: 0
    specifiers:
      - type: ImportDefaultSpecifier
        span:
          start: 8
          end: 13
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 8
            end: 13
            ctxt: 1
          value: React
          optional: false
    source:
      type: StringLiteral
      span:
        start: 19
        end: 26
        ctxt: 0
      value: react
      raw: "\"react\""
    typeOnly: false
    asserts: ~
  - type: ExportDefaultDeclaration
    span:
      start: 29
      end: 133
      ctxt: 0
    decl:
      async: false
      body:
        type: BlockStatement
        span:
          start: 66
          end: 133
          ctxt: 0
        stmts:
          - type: VariableDeclaration
            span:
              start: 72
              end: 108
              ctxt: 0
            kind: const
            declare: false
            declarations:
              - type: VariableDeclarator
                span:
                  start: 78
                  end: 107
                  ctxt: 0
                id:
                  optional: false
                  span:
                    start: 78
                    end: 87
                    ctxt: 2
                  type: Identifier
                  typeAnnotation: ~
                  value: component
                init:
                  type: JSXElement
                  span:
                    start: 90
                    end: 107
                    ctxt: 0
                  opening:
                    type: JSXOpeningElement
                    name:
                      type: Identifier
                      span:
                        start: 91
                        end: 94
                        ctxt: 3
                      value: div
                      optional: false
                    span:
                      start: 90
                      end: 95
                      ctxt: 0
                    attributes: []
                    selfClosing: false
                    typeArguments: ~
                  children:
                    - type: JSXText
                      span:
                        start: 95
                        end: 101
                        ctxt: 0
                      value: Sample
                      raw: Sample
                  closing:
                    type: JSXClosingElement
                    span:
                      start: 101
                      end: 107
                      ctxt: 0
                    name:
                      type: Identifier
                      span:
                        start: 103
                        end: 106
                        ctxt: 3
                      value: div
                      optional: false
                definite: false
          - type: ReturnStatement
            span:
              start: 114
              end: 131
              ctxt: 0
            argument:
              type: Identifier
              span:
                start: 121
                end: 130
                ctxt: 2
              value: component
              optional: false
      decorators: []
      generator: false
      identifier:
        type: Identifier
        span:
          start: 53
          end: 59
          ctxt: 1
        value: Sample
        optional: false
      params:
        - type: Parameter
          span:
            start: 60
            end: 64
            ctxt: 0
          decorators: []
          pat:
            optional: false
            span:
              start: 60
              end: 64
              ctxt: 2
            type: Identifier
            typeAnnotation: ~
            value: bool
      returnType: ~
      span:
        start: 44
        end: 133
        ctxt: 0
      type: FunctionExpression
      typeParameters: ~
